update all files to build

--- a/zoning-toolkit-ui/src/mods/zoning-toolkit-panel.module.scss
+++ b/zoning-toolkit-ui/src/mods/zoning-toolkit-panel.module.scss
@@ -1,3 +1,5 @@
+// zoning-toolkit-ui/src/mods/zoning-toolkit-panel.module.scss
+
 .panel {
     // Must remove panel from local positioning (to avoid affecting other mod buttons)
     position: absolute;
