update zustrand, fix package file

--- a/zoning-toolkit-ui/src/mods/zoning-toolkit-button.module.scss
+++ b/zoning-toolkit-ui/src/mods/zoning-toolkit-button.module.scss
@@ -1,4 +1,8 @@
-﻿.menuIcon {
+﻿/* src/mods/zoning-toolkit-button.module.scss */
+/* Keep it minimal so vanilla handles color / layout. */
+/* FAB icon size */
+
+.menuIcon {
     width: 40rem;
     height: 40rem;
 }
