fix edge case update button GetPrefab is potentially null

--- a/zoning-toolkit-ui/src/mods/zoning-toolkit-panel.module.scss
+++ b/zoning-toolkit-ui/src/mods/zoning-toolkit-panel.module.scss
@@ -7,7 +7,7 @@
     position: absolute;
     top: 50rem;
     // Let vanilla style most of it.
-    // max-width: 380rem;
+    max-width: 300rem;
 }
 
 .panelToolModeRow {
